2008-07-11 Mitsuya Shibata <mty.shibata@gmail.com>
        * text.c: Fix crashing in help menu when using certain locales
          (Savannah bug 23751)

2008-05-31 Chris Allegretta <chrisa@asty.org>
        * files.c,proto.h,text.c: Fix for conflicts with AIX curses
          variables, from William Jojo <jojowil@hvcc.edu>

2008-05-31 Chris Allegretta <chrisa@asty.org>
        * Fix for seg fault when window size too small, by
          Andreas Amann <andreas.amann@tyndall.ie>

GNU nano 2.0.7 - 2007.12.20
- General:
	- Simplify processing of mouse events.  Instead of calling
	  wenclose() to get the window a mouse event took place in and
	  manually adjusting the returned coordinates to be relative to
	  that window the mouse event took place in, call
	  wmouse_trafo(), which does both.  Changes to do_browser(),
	  do_mouse(), do_statusbar_mouse(), do_yesno_prompt(), and
	  do_mouseinput(). (DLR)
	- Simplify various multibyte string functions by using for loops
	  instead of while loops where possible, to match the
	  single-byte versions of these functions.  Changes to
	  mbstrncasecmp(), mbstrnlen(), mbstrpbrk(), and
	  has_blank_mbchars(). (DLR)
	- Relicense all source files to the GNU GPL version 3 or later.
	  Changes to configure.ac, *.c, and *.h. (DLR)
	- Relicense all documentation to the GNU GPL version 3 or
	  later/the GNU FDL version 1.2 or later with no Invariant
	  Sections, Front-Cover Texts, or Back-Cover Texts.  Changes to
	  doc/man/*.1, doc/man/nanorc.5, doc/man/fr/*.1,
	  doc/man/fr/nanorc.5, and doc/texinfo/nano.texi. (DLR)
	- Update copyright notices, as my copyrights have now been
	  assigned to the Free Software Foundation.  Changes to *.c and
	  *.h. (DLR)
	- Update copyright notices, as Chris Allegretta's copyrights
	  have now been assigned to the Free Software Foundation.
	  Changes to doc/man/nano.1, doc/man/fr/nano.1,
	  doc/texinfo/nano.texi, *.c and *.h. (DLR)
	- Make copyright notices consistent in style.  Changes to