@@ -1,3 +1,8 @@
+2008-08-08 Chris Allegretta <chrisa@asty.org>
+	* files.c (write_file): Check exit code of fclose(), since in certain out of space conditions the OS will
+	  happily report successful fwrite()s until you try and close the file.  Fix for Savannah bug
+	  #24000: no free space on partition - nano claims successful write - file empty 
+
 2008-07-11 Mitsuya Shibata <mty.shibata@gmail.com>
         * text.c: Fix crashing in help menu when using certain locales
           (Savannah bug 23751)
